--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <p class="c_one">Number 1 - I'm a class!</p>
-    <div id="id_one">Number 2 - I'm one ID.</div>
-    <p class="c_two">Number 3 - I'm a class, but cooler!</p>
-    <div id="id_two">Number 4 - I'm another ID.</div>
-    <p class="c_three">Number 5 - I'm a class!</p>
+    <p class="paragraph small odd">Number 1 - I'm a class!</p>
+    <div id="title" class="big">Number 2 - I'm one ID.</div>
+    <p class="paragraph medium odd">Number 3 - I'm a class, but cooler!</p>
+    <div id="title" class="medium titlecolor">Number 4 - I'm another ID.</div>
+    <p class="paragraph small odd">Number 5 - I'm a class!</p>
   </body>
 </html>
